<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SecondAcitvity">
    <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent"
                  android:orientation="vertical" tools:ignore="UselessParent">
        <RadioGroup
                android:id="@+id/petRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                tools:ignore="UselessParent">
            <TextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/radioGroupQuestion"
                    android:textStyle="bold"
                    android:textSize="20sp"
            />
            <RadioButton
                    android:id="@+id/dog"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer1"
            />
            <RadioButton
                    android:id="@+id/cat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer2"
            />
            <RadioButton
                    android:id="@+id/hamster"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer3"
            />
            <RadioButton
                    android:id="@+id/turtle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer4"
            />
        </RadioGroup>
        <Button android:layout_width="match_parent"
                android:text="@string/choose_pet_button"
                android:onClick="changePet"
                android:layout_height="wrap_content"/>
        <ImageView
                android:contentDescription="@string/pet_image"
                android:layout_width="match_parent"
                android:layout_height="212dp"
                app:srcCompat="@drawable/question_mark"
                android:id="@+id/pewImageView"/>
        <Button android:layout_width="match_parent"
                android:text="@string/button_to_main"
                android:id="@+id/toMainButton"
                android:onClick="changeToMain"
                android:layout_height="wrap_content"/>
        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                          android:orientation="vertical">

                <TextView
                        android:text="@string/scroll_text"
                        android:layout_width="match_parent"
                        android:layout_height="163dp" android:id="@+id/textView"/>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</FrameLayout>